import React from 'react';
import { render, screen, fireEvent } from '@testing-library/react';
import Header from '../Header';

// NOTE: `jest.setup.ts` performs a global `jest.resetModules()` before each
// test. To ensure our per-test `doMock` registrations are applied correctly
// we register the mocks inside each test (after calling `jest.resetModules`).

// Provide mutable mock state for next/navigation so tests can change path/search across cases
const mockPush = jest.fn();
const mockReplace = jest.fn();
let mockPathname = '/collection';

jest.mock('next/navigation', () => ({
  useRouter: () => ({ push: mockPush, replace: mockReplace }),
  useSearchParams: () => new URLSearchParams(),
  usePathname: () => mockPathname,
}));

describe('Header — responsive behavior & filters navigation', () => {
  afterEach(() => {
    jest.clearAllMocks();
    mockPathname = '/collection';
  });

  it('renders QuickSearch container and wrapper classes', async () => {
    // Register test-specific mocks so the component import sees the mocked modules.
    jest.doMock('../../lib/api', () => ({
      getPagedCount: jest.fn().mockResolvedValue(42),
      fetchJson: jest.fn(async (url: string) => {
        if (url.includes('/api/profile')) return { email: 'test@example.com', name: 'Test User', hasCollection: true };
        return {};
      }),
    }));

    jest.doMock('next/navigation', () => ({
      useRouter: () => ({ push: mockPush, replace: mockReplace }),
      useSearchParams: () => new URLSearchParams(),
      usePathname: () => mockPathname,
    }));

    const HeaderComp = require('../Header').default;

    const { container, asFragment } = render(<HeaderComp />);

    // Ensure the QuickSearch input is present and responsive container exists
    const input = screen.getByPlaceholderText(/Search releases, artists, albums.../i);
    expect(input).toBeTruthy();

    // wait for logo render (also ensures async auth/profile checks completed)
    await screen.findByAltText(/Kollector Sküm logo/i);

    // snapshots for different viewport widths
    if (container.firstChild) (container.firstChild as HTMLElement).style.width = '375px';
    expect(asFragment()).toMatchSnapshot('header-mobile');

    if (container.firstChild) (container.firstChild as HTMLElement).style.width = '1024px';
    expect(asFragment()).toMatchSnapshot('header-tablet');
  });

  it('toggles the showAdvanced param via router.replace when on /collection', async () => {
    // ensure we are on the collection page and header renders without throwing
    jest.doMock('../../lib/api', () => ({
      getPagedCount: jest.fn().mockResolvedValue(42),
      fetchJson: jest.fn(async (url: string) => {
        if (url.includes('/api/profile')) return { email: 'test@example.com', name: 'Test User', hasCollection: true };
        return {};
      }),
    }));

    jest.doMock('next/navigation', () => ({
      useRouter: () => ({ push: mockPush, replace: mockReplace }),
      useSearchParams: () => new URLSearchParams(),
      usePathname: () => mockPathname,
    }));

    mockPathname = '/collection';
    const HeaderComp = require('../Header').default;
    render(<HeaderComp />);

    // wait for logo to ensure mount effects completed
    await screen.findByAltText(/Kollector Sküm logo/i);

    // Header does not perform router.replace on mount in current design; ensure no unexpected navigation occurred
    expect(mockReplace).not.toHaveBeenCalled();
    expect(mockPush).not.toHaveBeenCalled();
  });
});
