// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header — responsive behavior & filters navigation renders QuickSearch container and wrapper classes: header-mobile 1`] = `
<DocumentFragment>
  <header
    class="relative bg-cover bg-center shadow-sm "
    style="background-image: url("/images/Kollector-Skum-bg.png"); width: 375px;"
  >
    <div
      class="absolute inset-0 bg-black/40"
    />
    <div
      class="fixed top-0 right-0"
      style="left: var(--sidebar-offset);"
    >
      <div
        class="py-0 items-start"
      >
        <div
          class="text-sm text-gray-500"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      class="relative z-10 max-w-7xl mx-auto w-full px-4 sm:px-6 lg:px-8 py-4"
    >
      <h1
        class="text-6xl font-black text-white mb-2"
      >
        KOLLECTOR SKÜM
      </h1>
      <div
        class="flex flex-col md:flex-row items-start gap-2 md:gap-4"
      >
        <a
          aria-label="Home"
          class="block"
          href="/"
        >
          <img
            alt="Kollector Sküm logo"
            class="h-36 w-auto object-contain shadow-md border-2 border-white"
            src="/images/Kollector-Skum-v2.png"
            style="display: block; background-color: rgba(255, 255, 255, 0.02);"
          />
        </a>
        <div
          class="flex flex-col flex-1 min-w-0"
        >
          <p
            class="text-[1.3125rem] text-white/90 font-semibold mt-2 md:mt-8"
          >
            Organise and discover your music library
          </p>
          <div
            class="mt-1 w-full flex items-center gap-2"
          >
            <div
              class="flex-1 min-w-0"
            >
              <form
                class="relative"
              >
                <div
                  class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
                >
                  <svg
                    class="h-5 w-5 text-gray-400"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <input
                  autocomplete="off"
                  class="block w-full pl-10 pr-10 py-2 border border-white/10 rounded-lg focus:outline-none focus:ring-2 focus:ring-white focus:border-white bg-white/5 focus:bg-white/10 text-white placeholder-gray-400 transition-all"
                  placeholder="Search releases, artists, albums..."
                  type="text"
                  value=""
                />
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header — responsive behavior & filters navigation renders QuickSearch container and wrapper classes: header-tablet 1`] = `
<DocumentFragment>
  <header
    class="relative bg-cover bg-center shadow-sm "
    style="background-image: url("/images/Kollector-Skum-bg.png"); width: 1024px;"
  >
    <div
      class="absolute inset-0 bg-black/40"
    />
    <div
      class="fixed top-0 right-0"
      style="left: var(--sidebar-offset);"
    >
      <div
        class="py-0 items-start"
      >
        <div
          class="text-sm text-gray-500"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      class="relative z-10 max-w-7xl mx-auto w-full px-4 sm:px-6 lg:px-8 py-4"
    >
      <h1
        class="text-6xl font-black text-white mb-2"
      >
        KOLLECTOR SKÜM
      </h1>
      <div
        class="flex flex-col md:flex-row items-start gap-2 md:gap-4"
      >
        <a
          aria-label="Home"
          class="block"
          href="/"
        >
          <img
            alt="Kollector Sküm logo"
            class="h-36 w-auto object-contain shadow-md border-2 border-white"
            src="/images/Kollector-Skum-v2.png"
            style="display: block; background-color: rgba(255, 255, 255, 0.02);"
          />
        </a>
        <div
          class="flex flex-col flex-1 min-w-0"
        >
          <p
            class="text-[1.3125rem] text-white/90 font-semibold mt-2 md:mt-8"
          >
            Organise and discover your music library
          </p>
          <div
            class="mt-1 w-full flex items-center gap-2"
          >
            <div
              class="flex-1 min-w-0"
            >
              <form
                class="relative"
              >
                <div
                  class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
                >
                  <svg
                    class="h-5 w-5 text-gray-400"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <input
                  autocomplete="off"
                  class="block w-full pl-10 pr-10 py-2 border border-white/10 rounded-lg focus:outline-none focus:ring-2 focus:ring-white focus:border-white bg-white/5 focus:bg-white/10 text-white placeholder-gray-400 transition-all"
                  placeholder="Search releases, artists, albums..."
                  type="text"
                  value=""
                />
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
